--- a/cb-nhadangchothue.html
+++ b/cb-nhadangchothue.html
@@ -288,10 +288,10 @@
               <ul class="aa-properties-nav aa-list-view">
                 <li>
                   <article class="aa-properties-item">
-                    <a style="width: 200px;" class="aa-properties-item-img" href="details-property.html">
-                      <img src="img/item/6.jpg"  alt="img" style="width: 200px; height: 160px">
+                    <a class="aa-properties-item-img" href="details-property.html">
+                      <img src="img/item/6.jpg"  alt="img">
                     </a>
-                    <div style="width: 637px" class="aa-properties-item-content">
+                    <div class="aa-properties-item-content">
 						<div class="col-md-8">
                       <div class="aa-properties-about" style="text-align: justify">
                        <h3><a href="details-property.html">Nhà riêng số 1</a></h3>
@@ -299,12 +299,12 @@
 						  <p>Tổng doanh thu trên căn: <b>36.000.000VNĐ</b></p>						 
                       </div>
 						</div>
-						<div class="col-md-4" style="height: 90px;text-align: right"><br><br>
-							<button style="width: 120px" type="button" class="btn btn-info" onclick="openForm()">Xem chi tiết</button><br>
+						<div class="col-md-4" style="text-align: right"><br><br>
+							<button type="button" class="btn btn-info" onclick="openForm()">Xem chi tiết</button><br>
 						</div>
                       <div class="aa-properties-detial">
 						  <div class="col-md-7"><span class="aa-price"> <strong>Ngày thu tiền kế tiếp: </strong> 15 ngày </span></div>
-						<div class="col-md-4" style="text-align: right; padding-right: 5px">
+						<div class="col-md-5" style="text-align: right; padding-right: 5px">
 						</div>	
 						</div>
 					  </div>
@@ -312,10 +312,10 @@
 				</li>
                 <li>
                   <article class="aa-properties-item">
-                    <a style="width: 200px;" class="aa-properties-item-img" href="details-property.html">
-                      <img src="img/item/6.jpg"  alt="img" style="width: 200px; height: 160px">
+                    <a class="aa-properties-item-img" href="details-property.html">
+                      <img src="img/item/6.jpg"  alt="img">
                     </a>
-                    <div style="width: 637px;" class="aa-properties-item-content">
+                    <div class="aa-properties-item-content">
 						<div class="col-md-7">
                       <div class="aa-properties-about" style="text-align: justify">
                         <h3><a href="details-property.html">Nhà riêng số 1</a></h3>
