--- a/for-rent.html
+++ b/for-rent.html
@@ -49,6 +49,7 @@
     <a class="scrollToTop" href="#"><i class="fa fa-angle-double-up"></i></a>
   <!-- END SCROLL TOP BUTTON -->
 
+
   <!-- Start header section -->
   <header id="aa-header"  style="border-bottom: solid 1px rgba(136,136,136,0.5); ">  
     <div class="container">
@@ -127,12 +128,13 @@
     </nav>
   </section>
   <!-- End menu section -->
-	
+
+
   <!-- Start Properties  -->
   <section id="aa-properties" style="margin-top: 150px; text-align: center">
     <div class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-9">
           <div class="aa-properties-content">
             <!-- start properties content head -->
             <div class="aa-properties-content-head">              
@@ -148,13 +150,13 @@
                 </form>
               </div>
               <div class="aa-properties-content-head-right">
-                <a id="aa-list-properties" href="#"><span class="fa fa-list"></span></a>
                 <a id="aa-grid-properties" href="#"><span class="fa fa-th"></span></a>
+                <a id="aa-list-properties" href="#"><span class="fa fa-list"></span></a>
               </div>            
             </div>
             <!-- Start properties content body -->
             <div class="aa-properties-content-body">
-              <ul class="aa-properties-nav aa-list-view">
+              <ul class="aa-properties-nav">
                 <li>
                   <article class="aa-properties-item">
                     <a class="aa-properties-item-img" href="details-property.html">
@@ -170,14 +172,14 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-property.html">Nhà riêng số 1</a></h3>
+                        <h3><a href="details-property.html">Chung cư 1</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                       </div>
                       <div class="aa-properties-detial">
                         <span class="aa-price">
                           $35000
                         </span>
-                        <a class="aa-properties-item-img" href="details-property.html">
+                        <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
                       </div>
                     </div>
                   </article>
@@ -211,8 +213,7 @@
                   </article>
                 </li>
                  <li>
-                  <article class="aa-properties-item">
-                    <a class="aa-properties-item-img" href="details-property.html">
+                  <article class="aa-properties-item">    <a class="aa-properties-item-img" href="details-property.html">
                       <img alt="img" src="img/item/2.jpg">
                     </a>
                     <div class="aa-tag sold-out">
@@ -226,7 +227,7 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-property.html">Cho thuê văn phòng</a></h3>
+                        <h3><a href="details-property.html">Chung cư 3</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                       </div>
                       <div class="aa-properties-detial">
@@ -239,8 +240,7 @@
                   </article>
                 </li>
                 <li>
-                  <article class="aa-properties-item">
-                    <a class="aa-properties-item-img" href="details-property.html">
+                  <article class="aa-properties-item">    <a class="aa-properties-item-img" href="details-property.html">
                       <img alt="img" src="img/item/5.jpg">
                     </a>
                     <div class="aa-tag for-sale">
@@ -254,7 +254,7 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-property.html">Cho thuê văn phòng</a></h3>
+                        <h3><a href="details-property.html">Chung cư 4</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                       </div>
                       <div class="aa-properties-detial">
@@ -267,8 +267,7 @@
                   </article>
                 </li>
                  <li>
-                  <article class="aa-properties-item">
-                    <a class="aa-properties-item-img" href="details-property.html">
+                  <article class="aa-properties-item">    <a class="aa-properties-item-img" href="details-property.html">
                       <img alt="img" src="img/item/3.jpg">
                     </a>
                     <div class="aa-tag for-rent">
@@ -281,7 +280,7 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-property.html">Appartment Title</a></h3>
+                        <h3><a href="details-property.html">Chung cư 5</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                       </div>
                       <div class="aa-properties-detial">
@@ -294,8 +293,7 @@
                   </article>
                 </li>
                  <li>
-                  <article class="aa-properties-item">
-                    <a class="aa-properties-item-img" href="details-property.html">
+                  <article class="aa-properties-item">    <a class="aa-properties-item-img" href="details-property.html">
                       <img alt="img" src="img/item/4.jpg">
                     </a>
                     <div class="aa-tag for-sale">
@@ -309,7 +307,7 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-property.html">Appartment Title</a></h3>
+                        <h3><a href="details-property.html">Chung cư 6</a>&nbsp;</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                       </div>
                       <div class="aa-properties-detial">
@@ -348,7 +346,7 @@
           </div>
         </div>
         <!-- Start properties sidebar -->
-        <div class="col-md-4">
+        <div class="col-md-3">
           <aside class="aa-properties-sidebar">
             <!-- Start Single properties sidebar -->
             <div class="aa-properties-single-sidebar">
