--- a/cb-nhadangchothue.html
+++ b/cb-nhadangchothue.html
@@ -316,15 +316,15 @@
                       <img src="img/item/6.jpg"  alt="img">
                     </a>
                     <div class="aa-properties-item-content">
-						<div class="col-md-7">
+						<div class="col-md-8">
                       <div class="aa-properties-about" style="text-align: justify">
                         <h3><a href="details-property.html">Nhà riêng số 1</a></h3>
 						  <p>Thời gian còn lại của hợp đồng: <span style="color: red"><b>12 ngày</b></span></p>
 						  <p>Tổng doanh thu trên căn: <b>66.000.000VNĐ</b></p>
                       </div>
 						</div>
-						<div class="col-md-5" style="height: 90px;text-align: right;"><br><br>
-							<button style="width: 120px;" type="button" class="btn btn-info" onclick="openForm()">Xem chi tiết</button>		
+						<div class="col-md-4" style="text-align: right;"><br><br>
+							<button type="button" class="btn btn-info" onclick="openForm()">Xem chi tiết</button>		
 						</div>
                       <div class="aa-properties-detial">
 						  <div class="col-md-7"><span class="aa-price" style="color: rgba(77,193,23,1.00)"> <strong>Ngày thu tiền kế tiếp: </strong> 12 ngày </span></div>
