--- a/cb-nhadangtrentrang.html
+++ b/cb-nhadangtrentrang.html
@@ -49,14 +49,13 @@
   <!-- Start header section -->
   <header id="aa-header"  style="border-bottom: solid 1px rgba(136,136,136,0.5); ">  
     <div class="container">
-      <div class="row"
         <div class="col-md-12">
           <div class="aa-header-area">
             <div class="row">
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="aa-header-right" style="text-align: left;">
-                  <a href="cb-index.html" class="aa-register" style="color: rgb(85,85,85);"><b>HỆ THỐNG ĐĂNG TIN</b></a>
-                  <a href="cs-index.html" class="aa-login" style="color: rgb(85,85,85);"><b>HỆ THỐNG QUẢN LÝ NHÀ ĐANG THUÊ</b></a>
+                  <a href="cb-index.html" target="_blank" class="aa-register" style="color: rgb(85,85,85);"><b>HỆ THỐNG ĐĂNG TIN</b></a>
+                  <a href="cs-index.html" class="aa-login" style="color: rgb(85,85,85);"><b>HỆ THỐNG QUẢN LÝ NHÀ ĐANG THUÊ</b></a>  
                 </div>              
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
@@ -69,7 +68,6 @@
           </div>
         </div>
       </div>
-    </div>
   </header>
   <!-- End header section -->
   <!-- Start menu section -->
@@ -111,47 +109,75 @@
   <section id="aa-properties" style="margin-top: 150px; text-align: center">
     <div class="container">
       <div class="row" style="padding: 0px;">
-        <div class="col-md-3">
-          <div class="aa-properties-content">            
-            <!-- Start properties content body -->
-			  <div class="vertical-menu">
-				  <a href="cb-dangtin.html">Đăng tin</a>
-				  <a href="cb-quanlytindadang.html">Quản lý tin đã đăng</a>
-				  <a href="cb-nhadangtrentrang.html" class="active">Nhà đang trên trang</a>
-				  <a href="cb-nhadangchothue.html">Nhà đang cho thuê</a>
-				  <a href="cb-doanhthu.html">Doanh thu</a>
-				  <a href="cb-thongbao.html">Thông báo</a>
-				</div>
+		<div class="col-md-3">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title"> <a class="active" href="cb-dangtin.html">Đăng tin</a> </h4>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title"> <a class="active" href="cb-quanlytindadang.html">Quản lý tin đã đăng</a> </h4>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title"> <a class="active" href="cb-nhadangtrentrang.html">Nhà đang trên trang</a> </h4>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title"> <a class="active" href="cb-nhadangchothue.html">Nhà đang cho thuê</a> </h4>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title"> <a class="active" href="cb-doanhthu.html">Doanh thu</a> </h4>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title"> <a class="active" href="cb-thongbao.html">Thông báo</a> </h4>
+              </div>
+            </div>
           </div>
         </div>
         <!-- Start properties sidebar -->
         <!-- Start properties sidebar -->
 		<div class="col-md-9" style="padding: 20px; margin: 0px;background-color: rgb(248,248,248);">
 			<div class="aa-properties-content">
-				  <h2 class="text-left" style="border-bottom: solid 1px;">Quản lý tin đã đăng</h2>
+				  <h2 class="text-left" style="border-bottom: solid 1px;">Nhà đang trên trang</h2>
             <!-- start properties content head -->
-            <div class="aa-properties-content-head">              
-              <div class="aa-properties-content-head-right">
+			<div class="aa-properties-content-head">
+              <div class="aa-properties-content-head-left">
                 <form action="" class="aa-sort-form">
                   <label for="">Sắp xếp</label>
                   <select name="">
-                    <option value="1" selected="Default">Mặc định</option>
+                    <option value="1" selected="Default">Ngày đăng</option>
                     <option value="2">Tên</option>
                     <option value="3">Giá</option>
-                    <option value="4">Ngày đăng</option>
                   </select>
                 </form>
-              </div>         
+              </div>				
+			  <div class="aa-properties-content-head-right" style="width: 40%">
+				  <table>
+				  	<tr>
+						<td style="width: 90%"><input class="form-control" type="text" placeholder="Tên nhà" aria-label="Search"></td>  
+						<td><button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button></td>
+					</tr>
+				  </table>
+              </div> 
             </div>
             <!-- Start properties content body -->
             <div class="aa-properties-content-body">
               <ul class="aa-properties-nav aa-list-view">
                 <li>
                   <article class="aa-properties-item">
-                    <a style="width: 200px;" class="aa-properties-item-img" href="details-property.html">
-                      <img src="img/item/6.jpg"  alt="img" style="width: 200px; height: 160px">
+                    <a class="aa-properties-item-img" href="details-property.html">
+                      <img src="img/item/6.jpg" alt="img">
                     </a>
-                    <div style="width: 637px" class="aa-properties-item-content">
+                    <div class="aa-properties-item-content">
 						<div class="col-md-7">
                       <div class="aa-properties-about" style="text-align: justify">
                         <h3><a href="details-property.html">Nhà riêng số 1</a></h3>
@@ -176,10 +202,10 @@
 				</li>
                 <li>
                   <article class="aa-properties-item">
-                    <a style="width: 200px;" class="aa-properties-item-img" href="details-property.html">
-                      <img src="img/item/6.jpg"  alt="img" style="width: 200px; height: 160px">
+                    <a class="aa-properties-item-img" href="details-property.html">
+                      <img src="img/item/6.jpg"  alt="img">
                     </a>
-                    <div style="width: 637px" class="aa-properties-item-content">
+                    <div class="aa-properties-item-content">
 						<div class="col-md-7">
                       <div class="aa-properties-about" style="text-align: justify">
                         <h3><a href="details-property.html">Nhà riêng số 1</a></h3>
@@ -188,7 +214,7 @@
 						 
                       </div>
 						</div>
-						<div class="col-md-5" style="height:106px;text-align: right; padding-top: 8px">
+						<div class="col-md-5" style="text-align: right; padding-top: 8px">
 							<button style="width: 120px" type="button" class="btn btn-success">Đề nghị gia hạn</button><br><br>		
 							<button style="width: 120px" type="button" class="btn btn-danger">Gỡ bài đăng</button>								
 						</div>
